UI changes for place order page.

--- a/src/app/inbox-app.css
+++ b/src/app/inbox-app.css
@@ -16,3 +16,8 @@ md-sidenav-container.md-pushed{
   padding-left: 200px;
 }
 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
