--- a/src/app/inbox/item-views/audio-compact-view.html
+++ b/src/app/inbox/item-views/audio-compact-view.html
@@ -5,7 +5,7 @@
     <img [src]="'app/share/images/company-logo/'+audioContent.fromCompany + '.png'" class="md-avatar client-img" alt="{{audioContent.from}}"/>
   </div>
   <div class="md-list-item-text" layout="column">
-    <h3>{{ audioContent.subject }}</h3>
+    <h3 class="list-label">{{ audioContent.subject }}</h3>
     <!--<h4>{{ audioContent.date | date }}</h4>
     <p>{{ audioContent.defaultTask.status }}</p>-->
     <audio controls>
