--- a/src/app/inbox/item-views/email-compact-view.html
+++ b/src/app/inbox/item-views/email-compact-view.html
@@ -5,7 +5,7 @@
     <img [src]="'app/share/images/company-logo/'+email.fromCompany + '.png'" class="md-avatar client-img" alt="{{email.from}}"/>
   </div>
   <div class="md-list-item-text" layout="column" (click)="showDetails = !showDetails">
-    <h3>{{ email.subject }}</h3>
+    <h3 class="list-label">{{ email.subject }}</h3>
     <h4>{{ email.from }}</h4>
     <p>{{ email.priority }}</p>
     <p>{{ email.defaultTask.assignedTo }}</p>
