Commit after adding more validations to create order form

--- a/src/app/inbox/inbox.component.html
+++ b/src/app/inbox/inbox.component.html
@@ -28,4 +28,5 @@
     </md-list>
   </md-content>
   <ib-create-order flex>Loading...</ib-create-order>
+  <ib-preview-order *ngIf="type == 'Order'" flex>Loading...</ib-preview-order>
 </div>
