--- a/src/app/share/components/header.component.html
+++ b/src/app/share/components/header.component.html
@@ -21,11 +21,11 @@
     History
   </md-button>
   <md-button md-button class="md-warn" aria-label="Settings" (click)="open('right')" >
-    <md-icon><i md-icon>settings</i></md-icon>
+    <md-icon><img class="" src="app/share/images/orders.svg"></md-icon>
     Settings
   </md-button>
 
-  <button md-button class="md-icon-button" aria-label="More" (click)="clicked('Show More')">
+  <!-- <button md-button class="md-icon-button" aria-label="More" (click)="clicked('Show More')">
     <i md-icon>more_vert</i>
-  </button>
+  </button> -->
 </div>
