--- a/src/app/order/components/create-order.component.css
+++ b/src/app/order/components/create-order.component.css
@@ -2,8 +2,8 @@ md-list-item.md-no-style {
   padding: 0px;
 }
 .qty {
-  width: 40px;
-  height: 26px;
+  width: 30px;
+  height: 20px;
   text-align: center;
   float:left;
 }
@@ -11,16 +11,21 @@ md-list-item.md-no-style {
   border: 0;
   font-size: 19px;
   line-height: 7px;
-  height: 16px;
+  height: 26px;
   width: 22px;
   display: block;
   outline:none;
   background: #DADADA;
+  float: left;
+}
+.add-item {
+  margin: 3px 0px 0px;
 }
 .row-title {
   background: #B3B3B3;
-  padding: 8px 12px 7px;
+  padding: 4px 12px 5px;
   margin: 0px 0px 0px 10px;
+  font-size: 14px;
 }
 .row-title div {
   color: #ffffff;
@@ -34,7 +39,7 @@ md-list-item.md-no-style {
   padding:10px;
 }
 .order-row-list h4 {
-  margin: 2px 0px;
+  margin: 0px 0px;
   font-weight: normal;
   font-size: 13px;
 }
@@ -45,7 +50,7 @@ md-list-item.md-no-style {
   color: #8AC249;
 }
 .order-details,.order-details{
-  height: 74vh;
+  height: 73vh;
   overflow: auto;
 }
 md-list-item {
@@ -66,10 +71,11 @@ md-list-item {
 .col-order-detail h2 {
   margin: 5px;
   font-weight: normal;
+  text-align: left;
 }
 .assigned-select label {
   float: left;
-  padding: 6px 10px 0 0;
+  padding: 6px 5px 0 0;
   font-size: 14px;
 }
 .assigned-select md-input-container {
@@ -84,7 +90,7 @@ md-list-item {
 
 .status-update label {
   float: left;
-  padding: 6px 10px 0 0;
+  padding: 6px 5px 0 0;
   font-size: 14px;
 }
 
@@ -116,6 +122,7 @@ md-input-container {
 .right-top-section md-list-item h3 {
   font-size: 14px;
   margin-bottom: 3px;
+  text-align: right;
 }
 
 .right-top-section md-list-item div {
