--- a/src/app/share/components/left-navigation.component.css
+++ b/src/app/share/components/left-navigation.component.css
@@ -1,6 +1,7 @@
 .leftarea h3 {
   color: #fff;
   font-weight: 200;
+  font-size: 16px;
 }
 .leftarea h1 {
   margin: 5px 0px;
@@ -60,4 +61,9 @@
   top: 0;
   font-size: 10px;
   line-height: 21px;
+}
+
+[md-raised-button] {
+  font-size: 16px;
+  text-transform: capitalize;
 }
