--- a/src/app/inbox/item-views/email-compact-view.html
+++ b/src/app/inbox/item-views/email-compact-view.html
@@ -6,7 +6,7 @@
   </div>
   <div class="md-list-item-text" layout="column" (click)="showDetails = !showDetails">
     <h3 class="list-label">{{ email.subject }}</h3>
-    <h4>{{ email.from }}</h4>
+    <h4>{{ email.from[0].address }}</h4>
     <p>{{ email.priority }}</p>
     <p>{{ email.defaultTask.assignedTo }}</p>
   </div>
