Email: now showing text(body) of email.

--- a/src/app/inbox/item-views/email-compact-view.html
+++ b/src/app/inbox/item-views/email-compact-view.html
@@ -37,7 +37,7 @@
     <template md-tab label="Content">
       <md-content class="md-padding">
 
-        <div>{{ email.body}}</div>
+        <div>{{ email.text}}</div>
       </md-content>
     </template>
     <template md-tab label="Attachments">
