Commit after solving email mock data issue

--- a/src/app/inbox/item-views/order-compact-view.html
+++ b/src/app/inbox/item-views/order-compact-view.html
@@ -2,7 +2,7 @@
   <div [ngClass]="{pending: isPending, inProgress: isInProgress, complete : isComplete}"> </div>
   <div class="client-section">
     <span><img src="app/inbox/images/mobile-app.png"> </span>
-    <img [src]="'app/share/images/company-logo/'+order.fromCompany + '.png'" class="md-avatar client-img" alt="{{order.companyName}}"/>
+    <img [src]="'app/share/images/company-logo/'+order.companyName + '.png'" class="md-avatar client-img" alt="{{order.companyName}}"/>
   </div>
   <div class="md-list-item-text" layout="column">
     <h3 class="list-label">{{ order.orderDetails }}</h3>
