--- a/src/app/inbox/item-views/order-compact-view.html
+++ b/src/app/inbox/item-views/order-compact-view.html
@@ -5,7 +5,8 @@
     <img [src]="'app/share/images/company-logo/'+order.fromCompany + '.png'" class="md-avatar client-img" alt="{{order.companyName}}"/>
   </div>
   <div class="md-list-item-text" layout="column">
-    <h3 class="list-label">{{ order.orderDetails }}</h3>
+    <p *ngFor="#item of order.orderDetails">{{item.name}}, {{item.variant}}, {{item.qty}}</p>
+    <!--<h3 class="list-label">{{ order.orderDetails }}</h3>-->
     <!--<h4>{{ order.orderDate | date }}</h4>-->
     <p>{{ order.orderType }}</p>
     <!--<p>{{ order.defaultTask.status }}</p>-->
